# FPSE-FALL-2025

./: README.md
assignment1/: Readme.md  (+1 more)
assignment2/test/: divisors_tests.ml  dune  reimplementation_tests.ml  tests.ml
assignment3/_build/default/src/: dict_item.cma  dict_item.cmxa  dict_item.cmxs  dict_item.ml  dict_item.mli  dict_item.pp.ml  dict_item.pp.mli  dune  simpledict.cma  simpledict.cmxa  simpledict.cmxs  simpledict.ml  simpledict.pp.ml  simpledict.pp.mli  simpletree.cma  simpletree.cmxa  simpletree.cmxs  simpletree.ml  simpletree.mli  simpletree.pp.ml  simpletree.pp.mli
assignment3/_build/default/src/.dict_item.objs/byte/: dict_item.cmi  dict_item.cmo  dict_item.cmt  dict_item.cmti
assignment3/_build/default/src/.dict_item.objs/native/: dict_item.cmx
assignment3/_build/default/src/.merlin-conf/: lib-dict_item  lib-simpledict  lib-simpletree
assignment3/_build/default/src/.simpledict.objs/byte/: simpledict.cmi  simpledict.cmo  simpledict.cmt  simpledict.cmti
assignment3/_build/default/src/.simpledict.objs/native/: simpledict.cmx
assignment3/_build/default/src/.simpletree.objs/byte/: simpletree.cmi  simpletree.cmo  simpletree.cmt  simpletree.cmti
assignment3/_build/default/src/.simpletree.objs/native/: simpletree.cmx
assignment3/_build/default/test/: dict_tests.cma  dict_tests.cmxa  dict_tests.cmxs  dict_tests.ml  dune  oUnit-Assignment2 Tests.cache  tests.ml  tree_tests.cma  tree_tests.cmxa  tree_tests.cmxs
assignment3/_build/default/test/.dict_tests.objs/byte/: dict_tests.cmi  dict_tests.cmo  dict_tests.cmt
assignment3/_build/default/test/.dict_tests.objs/native/: dict_tests.cmx
assignment3/_build/default/test/.merlin-conf/: exe-tests  lib-dict_tests  lib-tree_tests
assignment4/: Readme.md  dune
assignment4/_build/: .db  .digest-db  log
assignment4/_build/default/.dune/: configurator
assignment4/_build/default/src-test/: dune  exec_tests.cma  exec_tests.cmxa  exec_tests.cmxs  exec_tests.ml  hist_tests.cma  hist_tests.cmxa  hist_tests.cmxs
assignment4/_build/default/src-test/.merlin-conf/: exe-tests  lib-exec_tests  lib-hist_tests
assignment4/_build/default/src/lib/: histogram.cma  histogram.cmxa  histogram.cmxs  histogram.mli  histogram.pp.ml  histogram.pp.mli  keyword.cma  keyword.cmxa  keyword.cmxs  keyword.pp.ml  keyword.pp.mli  utils.cma  utils.cmxa  utils.cmxs
assignment4/_build/default/test/comments_test/: file.ml  file.txt
assignment4/_build/default/test/strings_test/: file.ml
assignment4/src-test/: hist_tests.ml  tests.ml
assignment4/src/lib/: dune  histogram.ml  keyword.ml  keyword.mli  utils.ml  utils.mli
assignment4/test/nested_folder_test/nested_folder/: non_ocaml_file.txt  ocaml_file.ml
(+208 files in other folders)
