
(library
  (name reimplementation_tests)
  (modules reimplementation_tests)
  (libraries
    reimplementation
    ounit2
    core))

(library
  (name divisors_tests)
  (modules divisors_tests)
  (libraries
    divisors
    ounit2
    core))

(library
  (name towers_tests)
  (modules towers_tests)
  (libraries
    towers
    ounit2
    core))

(test
  (name tests)
  (modules tests)
  (libraries
    reimplementation_tests
    divisors_tests
    towers_tests
    reimplementation
    divisors
    towers
    core
    ounit2))