(library
  (name tree_tests)
  (modules tree_tests)
  (libraries
    simpletree
    ounit2
    core))

(library
  (name dict_tests)
  (modules dict_tests)
  (libraries
    simpletree
    simpledict
    ounit2
    core))


(test
  (name tests)
  (modules tests)
  (libraries
    core
    ounit2
    tree_tests
    dict_tests
    simpledict
    simpletree
  ))